# AI-job-search

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI-job-search.code-workspace  CLAUDE.md  DOCKER_DEV.md  Dockerfile  README.md  README_INSTALL.md  SOLID_REFACTORING_SUMMARY.md  docker-compose.yml  localhost.har  mysql_queries.sql  opencode.json  pyproject.toml  pytest.ini  rename.py  rename2.py  rename3.py  rename4.py  requirements.in  requirements.txt  run.sh  runAiEnricher.sh  runSitesScraper.sh  run_1_Mysql.sh  run_2_Scraper.sh  run_4_Viewer.sh  run_5_ScrapperEnricher.sh  setup.sh  shakers_scrapper.patch
apps/aiCvMatcher/: Dockerfile  README.md  pyproject.toml
apps/aiCvMatcher/src/aiCvMatcher/: cvMatcher.py  main.py
apps/aiEnrich/: .dockerignore  Dockerfile  README.md  pyproject.toml  run.bat  run.sh  test_debug.txt  test_output.txt
apps/aiEnrich/src/aiEnrich/: crew.py  crewHelper.py  cvMatcher.py  dataExtractor.py  main.py  ollama_client.py  pipeline.py  skillEnricher.py
apps/aiEnrich/test/: crew_test.py  test_crew.py  test_cv_matcher.py  test_data_extractor.py  test_main.py
apps/aiEnrich3/: Dockerfile  README.md  pyproject.toml
apps/aiEnrich3/src/aiEnrich3/: config.py  dataExtractor.py  main.py  pipeline.py
apps/aiEnrichNew/: Dockerfile  README.md  pyproject.toml  run.bat  run.sh
apps/aiEnrichNew/src/aiEnrichNew/: config.py  cvMatcher.py  dataExtractor.py  fastCvMatcher.py  jsonHelper.py  llm_client.py  llm_utils.py  main.py  skillEnricher.py
apps/aiEnrichNew/test/: cvMatcher_test.py  dataExtractor_test.py  fastCvMatcher_test.py  jsonHelper_test.py  main_test.py
apps/aiFormFiller/: Dockerfile  README.md  pyproject.toml  run.bat  run.sh
apps/aiFormFiller/extension/: background.js  content.js  manifest.json
apps/aiFormFiller/extension/sidepanel/: panel.css  panel.html  panel.js
apps/aiFormFiller/src/aiFormFiller/: config.py  context_loader.py  main.py
apps/backend/: .dockerignore  Dockerfile  README.md  conftest.py  constants.py  main.py  pyproject.toml  pytest.ini  run.bat  run.sh
apps/backend/api/: company_synonyms.py  ddl.py  filter_configurations.py  jobs.py  jobs_applied.py  jobs_history.py  main.py  metrics.py  salary.py  settings.py  skills.py  statistics.py  statistics_archived.py
apps/backend/api/__test__/: jobs_security_test.py  skills_test.py  (+1 more)
apps/backend/models/: company_synonym.py  filter_configuration.py  job.py  settings.py  skill.py
apps/backend/repositories/: __init__.py  combinedStatsRepository.py  company_synonym_repository.py  ddl_repository.py  filter_configurations_repository.py  jobDeleteRepository.py  jobQueryRepository.py  jobReadRepository.py  jobWriteRepository.py  jobs_repository.py  scrapper_state_repository.py  skills_repository.py  snapshots_repository.py  statistics_repository.py  watcher_repository.py
apps/backend/resources/: defaultFilterConfigurations.json
apps/backend/services/: company_synonym_service.py  ddl_service.py  filter_configurations_service.py  jobQueryService.py  jobSnapshotService.py  job_delete_service.py  jobs_service.py  salary_history_service.py  salary_service.py  settings_service.py  skills_service.py  statistics_archived_service.py  statistics_service.py  watcher_service.py
apps/backend/test/: constants_test.py  test_bulk_update.py  test_filters.py  test_jobs.py  test_jobs_applied.py  test_jobs_filters.py  test_jobs_repository.py  test_jobs_security.py  test_salary_api.py  test_statistics_service.py
apps/backend/utils/: filter_parser.py  job_utils.py
apps/commonlib/: README.md  coverage_report.txt  pyproject.toml  pytest_out.txt
apps/commonlib/commonlib/: __init__.py  aiEnrichRepository.py  ai_helpers.py  company_matcher.py  company_normalizer.py  cv_loader.py  dateUtil.py  environmentUtil.py  exceptionUtil.py  fileSystemUtil.py  findLastDuplicated.py  jobSnapshotRepository.py  json_helpers.py  keep_system_awake.py  mergeDuplicates.py  mongodb_provider.py  mysqlUtil.py  observability.py  prometheus_exporter.py  salary.py  skill_context.py  skill_enricher_service.py  sqlUtil.py  stringUtil.py  systemUtil.py  terminalColor.py  terminalUtil.py  util.py  wake_timer.py
apps/commonlib/test/: architecture_test.py  architecture_util.py  dateUtil_test.py  exceptionUtil_test.py  fileSystemUtil_test.py  power_test.py  stringUtil_test.py  terminalUtil_test.py  util_test.py
apps/cron/: Dockerfile  README.md  pyproject.toml  run.bat  run.sh
apps/scrapper/: .dockerignore  Dockerfile  README.md  UNDETECTED_CHROMEDRIVER.md  pyproject.toml  run.bat  run.sh
apps/scrapper/scrapper/: baseScrapper.py  conftest.py  driverUtil.py  glassdoor.py  indeed.py  index.html  infojobs.py  linkedin.py  main.py  main2.py  persistence_manager.py  scrapper_config.py  scrapper_execution.py  scrapper_scheduler.py  seleniumSocketConnRetry.py  seleniumUtil.py  tecnoempleo.py
apps/scrapper/test/: baseScrapperUtils_test.py  conftest.py  driverUtil_test.py  glassdoor_test.py  indeed_test.py  infojobs_test.py  linkedin_test.py  main_test.py  persistence_manager_test.py  repro_retry.py  scrapper_execution_test.py  scrapper_scheduler_test.py  seleniumService_test.py  seleniumSocketConnRetry_test.py  seleniumUtil_test.py  tecnoempleo_test.py  test_base_scrapper.py  test_helpers.py  test_linkedin_scrapper.py  test_scrapping_service.py  test_selenium_util.py  wake_timer_test.py
apps/viewer/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  run.bat  run.sh
apps/viewer/test/: __init__.py  cleanUtil_test.py  cleaner_test.py  conftest.py  dashboard_test.py  historyUtil_test.py  main_test.py  mysql_conn_test.py  salaryCalculator_test.py  stComponents_test.py  stStateUtil_test.py  stUtil_test.py  statistics_test.py  testUtil.py  test_main.py  test_mysql_conn.py  test_viewer_helpers.py  viewAndEditEvents_test.py  viewAndEditHelper_test.py  viewAndEdit_test.py  viewUtil_test.py  viewerAndEditHelper_test.py
apps/viewer/viewer/: cleaner.py  dashboard.py  main.py  mysqlConn.py  streamlitConn.py  viewAndEdit.py  viewAndEditConstants.py  viewAndEditEvents.py  viewAndEditHelper.py  viewConstants.py
(+1130 files in other folders)
