[project]
name = "ai_job_search"
version = "0.1.0"
description = "ai-job-search using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "linkedin-api>=2.3.1"
]

[project.scripts]
ai_job_search = "ai_job_search.main:run"
run_crew = "ai_job_search.main:run"
train = "ai_job_search.main:train"
replay = "ai_job_search.main:replay"
test = "ai_job_search.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
