[tool.poetry]
name = "ai-job-search"
version = "0.1.0"
description = "Monorepo híbrido con Python 3.10"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
commonlib = {path = "./packages/commonlib/", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
coverage-badge = "^1.1.2"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"