[project]
name = "aiCvMatcher"
version = "0.1.0"
description = "Fast CV Matcher extracted from aiEnrichNew"
requires-python = ">=3.10,<3.13"
dependencies = [
    "commonlib==0.1.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0,<2.4.0",
]

[project.scripts]
aicvmatcher = "aiCvMatcher.main:run"

[tool.uv.sources]
commonlib = { path = "../commonlib", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.0"
]

[tool.coverage.run]
branch = true
source = ["src/aiCvMatcher"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiCvMatcher"]
