[project]
name = "aiEnrich"
version = "0.1.0"
description = "aiEnrich"
requires-python = ">=3.10,<3.13"
dependencies = [
    "commonlib==0.1.0",
    "crewai[tools]>=0.80.0,<1.0.0",
    "linkedin-api>=2.3.1",
    "pandas==2.3.3",
]

[project.scripts]
aienrich = "aiEnrich.main:run"
run_crew = "aiEnrich.main:run"
train = "aiEnrich.main:train"
replay = "aiEnrich.main:replay"
test = "aiEnrich.main:test"

[tool.uv.sources]
commonlib = { path = "../../packages/commonlib", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0"
    "coverage-badge>=1.1.2"
]

[tool.coverage.run]
branch = true
source = ["aiEnrich"]

[tool.coverage.report]
show_missing = true
fail_under = 45

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiEnrich"]

[tool.hatch.metadata]
allow-direct-references = true

