[project]
name = "aiEnrichNew"
version = "0.1.0"
description = "aiEnrichNew with local Hugging Face models"
requires-python = ">=3.10,<3.13"
dependencies = [
    "commonlib==0.1.0",
    "pandas==2.3.3",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.29.0",
    "langchain-huggingface>=0.0.1",
    "pdfplumber>=0.11.8",
]

[project.scripts]
aienrichnew = "aiEnrichNew.main:run"

[tool.uv.sources]
commonlib = { path = "../commonlib", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.0"
]

[tool.coverage.run]
branch = true
source = ["src/aiEnrichNew"]

[tool.coverage.report]
show_missing = true
fail_under = 20

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiEnrichNew"]
