[project]
name = "aiFormFiller"
version = "0.1.0"
description = "AI-powered form question answerer using CV and preferences"
requires-python = ">=3.10,<3.13"
dependencies = [
    "commonlib==0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.55.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
]

[project.scripts]
aiformfiller = "aiFormFiller.main:run"

[tool.uv.sources]
commonlib = { path = "../commonlib", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.0",
    "genbadge[coverage]>=1.1.0",
]

[tool.coverage.run]
branch = true
source = ["src/aiFormFiller"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiFormFiller"]
