[project]
name = "api"
version = "0.1.0"
description = "AI Job Search API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "commonlib",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "mysql-connector-python>=9.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "pytest-cov>=7.0.0",
    "coverage-badge>=1.1.2",
]

[tool.uv.sources]
commonlib = { path = "../../packages/commonlib", editable = true }

[tool.pytest.ini_options]
addopts = "--cov=api --cov-report=term-missing"

[tool.coverage.run]
omit = ["../../packages/*"]
source = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
