[project]
name = "api"
version = "0.1.0"
description = "AI Job Search API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "commonlib==0.1.0", 
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "mysql-connector-python>=9.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
]

[tool.poetry.dependencies]
commonlib = { path = "../../apps/commonlib/", develop = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.26.0",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.0",
]

[tool.uv.sources]
commonlib = { path = "../commonlib", editable = true }

[tool.pytest.ini_options]
addopts = "--cov=api --cov-report=term-missing"

[tool.coverage.run]
omit = ["../../apps/commonlib/*"]
source = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
