[project]
name = "commonlib"
version = "0.1.0"
description = "Ai-job-search Common library"
readme = "README.md"
requires-python = ">=3.10,<3.14"
packages = [{include = "commonlib"}]

include = "commonlib"
from = "."

dependencies = [
    "mysql-connector-python==9.4.0",
    "python-dotenv>=1.0.0",
    "mathparse (>=0.2.7,<0.3.0)",
    "pdfplumber>=0.11.8",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.0",
]

[tool.coverage.run]
branch = true
source = ["commonlib"]

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    # Exclude Windows-specific blocks from coverage on Linux/macOS
    # Note: Parentheses are escaped because coverage uses regex matching
    "if platform\\.system\\(\\) == 'Windows':",
    # Exclude non-Windows blocks from coverage on Windows (if any)
    "if self.os_type != 'Windows':",
]

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"