[project]
name = "cron"
version = "0.1.0"
description = "Generic background scheduler for periodic cron jobs"
requires-python = ">=3.10,<3.14"
dependencies = [
    "commonlib==0.1.0",
    "pymongo>=4.10.0",
    "mysql-connector-python>=9.0.0",
]

[project.scripts]
cron = "cron.main:run"

[tool.uv.sources]
commonlib = { path = "../commonlib", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "genbadge[coverage]>=1.1.0",
]

[tool.coverage.run]
branch = true
source = ["src/cron"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cron"]
