[project]
name = "scrapper"
version = "0.1.0"
description = "Scrapper"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "commonlib==0.1.0",
    "selenium>=4.37.0,<5.0.0",
    "markdownify==1.2.0",
    "undetected-chromedriver==3.5.4",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
commonlib = { path = "../../packages/commonlib/", develop = true }
selenium = ">=4.37.0,<5.0.0"
markdownify = "1.2.0"
undetected-chromedriver = "3.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
coverage-badge = "^1.1.2"

[tool.coverage.run]
branch = true
source = ["scrapper"]

[tool.coverage.report]
show_missing = true
fail_under = 30

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"