[project]
name = "scrapper"
version = "0.1.0"
description = "Scrapper"
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "commonlib==0.1.0",
    "selenium>=4.37.0,<5.0.0",
    "markdownify==1.2.0",
    "undetected-chromedriver==3.5.4",
    "tabulate>=0.9.0",
    "scrapling (>=0.4.1,<0.5.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "camoufox (>=0.4.11,<0.5.0)",
    "patchright (>=1.58.2,<2.0.0)",
    "msgspec (>=0.20.0,<0.21.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
commonlib = { path = "../../apps/commonlib/", develop = true }
selenium = ">=4.37.0,<5.0.0"
markdownify = "1.2.0"
undetected-chromedriver = "3.5.4"
tabulate = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
genbadge = {extras = ["coverage"], version = "^1.1.0"}

[tool.coverage.run]
branch = true
source = ["scrapper"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"