[project]
name = "viewer"
version = "0.1.0"
description = "Viewer"
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "commonlib==0.1.0",
    "mysql-connector-python==9.4.0",
    "streamlit==1.50.0",
    "plotly==6.3.1",
    "pandas==2.3.3",
    "altair==5.5.0",
]

[tool.poetry.dependencies]
commonlib = { path = "../../packages/commonlib/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[tool.coverage.run]
branch = true
source = ["viewer"]

[tool.coverage.report]
show_missing = true
fail_under = 5

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"